--- a/bas/style.css
+++ b/bas/style.css
@@ -1,6 +1,7 @@
 :root {
   /*Dark Mode Colors*/
   --DM-primary-bg-color: #1A1B26;/*Deep Navy*/
+  --DM-secondary-bg-color: #313247;/*Dark Navy*/
   --DM-text-color: #DDE1F0; /*Off-white*/
   --accent1: #FFFF9E; /*Quest Gold*/
   --accent2: #313247; /*Magic Purple*/
