--- a/index.css
+++ b/index.css
@@ -15,3 +15,37 @@ main {
   width: 60vw;
   height: 100vh;
 }
+
+.intro {
+  display: grid;
+  grid-template-areas:
+  "logo h1"
+  "logo p";
+  grid-template-columns: 1fr 3fr;
+  max-height: min-content;
+  width: 100%;
+  min-height: min-content;
+}
+
+.intro img {
+  grid-area: logo;
+  max-width: 200px;
+  max-height: 200px;
+  object-fit: contain;
+  display: grid;
+  justify-self: center;
+}
+
+.intro h1 {
+  grid-area: h1;
+  max-width: fit-content;
+  max-height: fit-content;
+  margin-left: 12px;
+}
+
+.intro p {
+  grid-area: p;
+  align-self: center;
+  margin-left: 12px;
+}
+
